[project]
name = "scylla"
description = "ScyllaDB Documentation Homepage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pygments>=2.18.0",
    "sphinx-scylladb-theme>=1.9.2",
    "sphinx-sitemap>=2.9.0",
    "sphinx-autobuild>=2025.08.25",
    "sphinx>=9.0",
    "sphinx-multiversion-scylla>=0.3.8",
    "redirects_cli>=0.1.3",
    "sphinxcontrib-datatemplates>=0.11.0",
]

[tool.uv]
package = false
